# AlpacaHub

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  alpaca_exception.hpp  alpaca_hub_common.hpp  alpaca_hub_server.cpp  alpaca_hub_server.hpp  http_server_logger.hpp  i_alpaca_telescope.hpp  image_bytes.hpp  main.cpp  qhy_alpaca_camera.cpp  qhy_alpaca_camera.hpp  qhy_alpaca_filterwheel.hpp  zwo_am5_telescope.cpp  zwo_am5_telescope.hpp
src/common/: CMakeLists.txt  alpaca_exception.cpp  alpaca_exception.hpp  alpaca_hub_common.hpp  alpaca_hub_serial.cpp  alpaca_hub_serial.hpp  image_bytes.hpp
src/drivers/: CMakeLists.txt  ONSTEP_COMMANDS.md  onstep_commands.cpp  onstep_commands.hpp  onstep_telescope.cpp  onstep_telescope.hpp  pegasus_alpaca_focuscube3.cpp  pegasus_alpaca_focuscube3.hpp  pegasus_alpaca_focuser.cpp  pegasus_alpaca_focuser.hpp  pegasus_alpaca_ppba.cpp  pegasus_alpaca_ppba.hpp  primaluce_focuser_rotator.cpp  primaluce_focuser_rotator.hpp  qhy_alpaca_camera.cpp  qhy_alpaca_camera.hpp  qhy_alpaca_filterwheel.cpp  qhy_alpaca_filterwheel.hpp  qhy_alpaca_filterwheel_standalone.cpp  qhy_alpaca_filterwheel_standalone.hpp  zwo_am5_commands.cpp  zwo_am5_commands.hpp  zwo_am5_telescope.cpp  zwo_am5_telescope.hpp
src/html/: index.html  index2.html
src/html/css/: icons.css
src/html/js/: focuser.js
src/interfaces/: CMakeLists.txt  i_alpaca_camera.hpp  i_alpaca_device.hpp  i_alpaca_filterwheel.hpp  i_alpaca_focuser.hpp  i_alpaca_rotator.hpp  i_alpaca_switch.hpp  i_alpaca_telescope.hpp
src/server/: CMakeLists.txt  alpaca_hub_server.cpp  alpaca_hub_server.hpp
src/tests/: pegasus_alpaca_focuser_tests.cpp  primaluce_tests.cpp  qhy_alpaca_filterwheel_standalone_tests.cpp  zwo_am5_commands_tests.cpp  zwo_am5_mount_tests.cpp
src/util/: serial_console.cpp
